currency formatting fixed on iOS

--- a/src/components/css/index.css
+++ b/src/components/css/index.css
@@ -3,6 +3,7 @@
     font-family: 'Sulphur Point', sans-serif;
     font-weight: 400;
     line-height: 0.4;
+    -webkit-appearance: none;
 }
 
 body {
@@ -62,11 +63,13 @@ input, .currency {
     width: 6.8vh;
     align-self: center;
     text-align: center;
-    outline:none
+    line-height: 4vh;
+    outline:none;
+    -webkit-appearance: none;
 }
 
 .chf {
-    font-size: 2vh;
+    font-size: 3vh;
     height: 6vh;
     padding-top: 1vh;
 }
